# auxos_messages

./: CMakeLists.txt  README.md  manifest.xml  package.xml  stack.xml
action/: FollowDubinsPath.action  FollowDubinsSegment.action  PlanThenFollowDubinsPath.action  TopicLogger.action
msg/: DubinsPath.msg  DubinsSegment.msg  EmData.msg  EmDataStamped.msg  PathError.msg  PathResult.msg  Rmp440Command.msg  StampedPathError.msg
srv/: LimitMotion.srv  LockWaypointIndex.srv  control.srv  uuid.srv
